# actix-web-admin

./: Cargo.toml  LICENSE
src/: main.rs
src/api/: mod.rs  upload.rs  user.rs
src/config/: cfg.rs
src/middle/: jwt.rs
src/model/: user.rs
src/service/: mod.rs  user.rs  xterm.rs
src/utils/: constants.rs  files.rs  logger.rs  mod.rs  response.rs  token.rs
