[package]
name = "rust-actix-web-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
jsonwebtoken = "8.2.0"
futures = "0.3.25"
log = "0.4.17"
time = "0.3.17"
actix-service = "2.0.2"
colored = "2.0.0"
chrono = "0.4.23"
futures-util = "0.3.25"
derive_more = "0.99.17"
serde_json = "1.0"
erased-serde = "0.3.24"
serde_derive = "1.0"
serde = "1.0"
actix-multipart = "0.4.0"
actix = "0.13.0"
actix-web-actors = "4.1.0"
tokio-pty-process = "0.4.0"
tokio-codec = "0.1.2"
handlebars = "4.3.6"
libc = "0.2.139"

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]